# WordFormat

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PUBLIC_API.md  README.md  build.bat  config.yaml  debug_generate_json.py  main.py  modify_config_ui.py  print_tree.py  pyproject.toml  pyproject.toml.bak  set_style.py  set_tag.py  start_api.py  system_prompt.txt  undergrad_thesis.yaml  utils.py  字段文档.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: general-issue.md
.github/workflows/: ci.yml
WordFormatUI/: README.md  index.html  package-lock.json  package.json
WordFormatUI/src/: App.vue
WordFormatUI/src/components/: ConfigSidebar.vue  DocTagChecker.vue  FileUploadPanel.vue  FormatActionPanel.vue  GlobalToast.vue  NodeDetailPanel.vue  NodeListPanel.vue  SettingsPage.vue
WordFormatUI/src/composables/: useTagHelpers.js
WordFormatUI/src/config-generator/: ConfigGenerator.vue  utils.js
WordFormatUI/src/config-generator/components/: AbstractConfig.vue  AcknowledgementsConfig.vue  ConfigSection.vue  FiguresConfig.vue  FormatConfig.vue  GlobalFormatConfig.vue  HeadingsConfig.vue  NumberingConfig.vue  ReferencesConfig.vue  TablesConfig.vue  WarningFieldsConfig.vue  YamlOutput.vue
configs/: undergrad_thesis.yaml
docs/: README.md  architecture.md  configuration.md  contributing.md  faq.md  installation.md  md-to-docx.md  rule-handler-guide.md  usage.md
example/: undergrad_thesis.yaml
model/20260204/: id2label.json  label2id.json  说明.txt
scripts/: build.bat  build.sh  clean.bat  download_model.py  sync_version.py
src/: __init__.py  base.py  set_style.py  set_tag.py  settings.py  tree.py  utils.py
src/agent/: __init__.py  api.py  message.py  onnx_single_infer.py
src/api/: __init__.py
src/config/: __init__.py  config.py  datamodel.py
src/rules/: __init__.py  abstract.py  acknowledgement.py  body.py  caption.py  get_some.py  heading.py  keywords.py  node.py  references.py  set_some.py  style.py  utils.py
src/style/: __init__.py  check_format.py  get_some.py  set_some.py  style_enum.py
src/word_structure/: __init__.py  document_builder.py  node_factory.py  settings.py  tree_builder.py  utils.py
src/wordformat/: __init__.py  __main__.py  _version.py  base.py  cli.py  hyperlinks.py  log_config.py  media.py  numbering.py  render.py  set_style.py  set_tag.py  settings.py  tree.py  utils.py
src/wordformat/agent/: __init__.py  api.py  message.py  onnx_infer.py  onnx_single_infer.py
src/wordformat/api/: __init__.py
src/wordformat/api/static/: index.html
src/wordformat/api/static/assets/: index-9ACSkLX-.js  index-B3hp8asD.css  index-B8bZWznz.css  index-BBrpGIev.js  index-BI1_kgRW.css  index-BQVqLsTe.js  index-Bkm3Bqq9.css  index-COPJTdr5.js  index-CRoFHbJe.css  index-CkR2UYnL.js  index-D1xSiJtF.js  index-D7BJOfFL.css  index-DFE6ITTp.css  index-Dcu295__.css  index-byNjEvbh.js  index-ecmoXcdv.js
src/wordformat/classify/: tag.py
src/wordformat/config/: config.py  datamodel.py  dotdict.py  loader.py  models.py
src/wordformat/core/: __init__.py  category.py  tree.py  tree_builder.py
src/wordformat/data/: system_prompt.txt
src/wordformat/data/model/: .model_version  tokenizer.json
src/wordformat/data/model/20260204/: bert_paragraph_classifier.onnx  说明.txt
src/wordformat/markdown/: parser.py
src/wordformat/math/: __init__.py  omml.py
src/wordformat/orchestration/: __init__.py  binding.py  image_registry.py  style_fixer.py  table_formatter.py
src/wordformat/pipeline/: __init__.py  context.py  orchestrate.py  stages.py  stages_md.py
src/wordformat/rules/: __init__.py  abstract.py  acknowledgement.py  body.py  caption.py  formula.py  heading.py  image.py  keywords.py  math.py  node.py  object.py  references.py  table.py
src/wordformat/structure/: __init__.py  document_builder.py  node_factory.py  registry.py  settings.py  tree_builder.py  utils.py
src/wordformat/style/: __init__.py  check_format.py  comment_format.py  comments.py  defs.py  diff.py  get_some.py  inheritance.py  reader.py  set_some.py  style_enum.py  units.py  utils.py  writer.py  xml_ops.py
src/wordformat/utils/: __init__.py  _docx.py  _fs.py  _text.py  _yaml.py
src/wordformat/word_structure/: document_builder.py  node_factory.py  settings.py  tree_builder.py  utils.py
tests/: conftest.py  test_acknowledgement.py  test_api.py  test_base.py  test_body.py  test_caption_numbering.py  test_classify.py  test_cli.py  test_core.py  test_core_tree.py  test_coverage_boost.py  test_heading.py  test_integration.py  test_keywords.py  test_log_config.py  test_node.py  test_numbering.py  test_orchestration.py  test_rules.py  test_set_style.py  test_set_tag.py  test_style.py  test_style_defs.py  test_style_diff.py  test_style_writer.py  test_tree.py  test_utils.py
tests/agent/: test_agent.py
tests/api/: test_api.py
tests/classify/: test_tag.py
tests/config/: test_config.py
tests/markdown/: test_parser.py  test_stages_md.py
tests/math/: test_omml.py
tests/rules/: test_abstract.py  test_acknowledgement.py  test_body.py  test_caption.py  test_heading.py  test_keywords.py  test_node.py  test_object.py  test_references.py  test_rules.py
tests/style/: test_check_format.py  test_defs.py  test_diff.py  test_get_some.py  test_inheritance.py  test_reader.py  test_set_some.py  test_style.py  test_style_enum.py  test_utils.py  test_writer.py
tests/utils/: test_text.py
tests/word_structure/: test_word_structure.py
ui/app/: config_editor.py  message_box.py  override_row.py  safe_widgets.py  section_page.py
ui/data/: constants.py
ui/style/: theme.py
wordformat-skill/: SKILL.md
wordformat-skill/data/: category_reference.md  config.yaml  config_editing_guide.md  config_spec.md  font_size_table.md
wordformat-skill/scripts/: setup_config.py  validate_config.py  validate_json.py
