[project]
name = "wordformat"
version = "0.1.0"
description = "论文格式自动化处理工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.1",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "onnxruntime>=1.23.2",
    "openai>=2.15.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "tenacity>=9.1.2",
    "tokenizers>=0.22.2",
    "uvicorn>=0.40.0",
]
[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "T20", # flake8-print
    "TC", # flake8-type-checking
    "ASYNC", # flake8-asyncio
]
ignore = [
    "ASYNC210",
    "ASYNC251",
    "ASYNC230",
    "TC003",
    "TC002"
]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pycodestyle]
max-line-length = 108
max-doc-length = 200
ignore-overlong-task-comments = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 显式声明使用 src 布局（推荐）
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wordformat = ["data/*"]

[project.scripts]
wordformat = "wordformat.cli:main"