[project]
name = "wordformat"
version = "1.0.1"
description = "论文格式自动化处理工具"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "afish", email = "1593699665@qq.com"},
]
keywords = ["word", "docx", "thesis", "format", "论文", "格式", "校验", "自动化"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.7.3",
    "numpy>=1.24.0",
    "onnxruntime>=1.17.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "tokenizers>=0.22.2",
    "webcolors>=25.10.0",
]

[project.urls]
Homepage = "https://github.com/AfishInLake/WordFormat"
Repository = "https://github.com/AfishInLake/WordFormat"
"Bug Tracker" = "https://github.com/AfishInLake/WordFormat/issues"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "T20", # flake8-print
    "TC", # flake8-type-checking
    "ASYNC", # flake8-asyncio
]
ignore = [
    "ASYNC210",
    "ASYNC251",
    "ASYNC230",
    "TC003",
    "TC002"
]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pycodestyle]
max-line-length = 108
max-doc-length = 200
ignore-overlong-task-comments = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 显式声明使用 src 布局（推荐）
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wordformat = ["data/**/*"]

[project.scripts]
wordformat = "wordformat.cli:main"
wf = "wordformat.cli:main"


[project.optional-dependencies]
api = [
    "fastapi>=0.128.1",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
dev = [
    "wordformat[test,api]",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "pyinstaller>=6.18.0",
]
